syntax="proto3";
package user;
option go_package="user";

message BaseMessage {
	int64 user_id=1;
	string token=2;
}
message BaseResponse {
	int32 status_code=1;
	optional string status_msg=2;
	
}
message douyin_user_request {
	string username=1;
	string password=2;
}
message douyin_user_response{
	BaseResponse base_response=1;
	BaseMessage base_message=3;
}
message douyin_user_message_request {
	BaseMessage base_resp=1;
}
message douyin_uesr_message_response {
	BaseResponse base_resp=1;
	User user=2;
}
message User {
	int64 id=1;
	string name=2;
	optional int64 follow_count=3;
	optional int64 follower_count=4;
	bool is_follow=5;
}
service UserService {
	rpc RegisterUser (douyin_user_request) returns (douyin_user_response);
	rpc LoginUser(douyin_user_request) returns (douyin_user_response);
	rpc GetUser (douyin_user_message_request) returns (douyin_uesr_message_response);
}